--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="header">
       <div class="container">
-        <div class="navbar" >
+        <div class="navbar">
           <div class="logo">
             <img src="images/logo.png" alt="" width="125px" />
           </div>
@@ -22,6 +22,7 @@
               <li><a href="">Account</a></li>
             </ul>
           </nav>
+          <img src=images/cart.png alt="" width="30px" height="30px" >
         </div>
         <div class="row">
           <div class="col-2">
@@ -39,6 +40,24 @@
           </div>
           <div class="col-2">
             <img src="images/image1.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- features categories -->
+
+    <div class="categories">
+      <div class="small-container">
+        <div class="row">
+          <div class="col-3">
+            <img src="images/category-1.jpg" />
+          </div>
+          <div class="col-3">
+            <img src="images/category-2.jpg" />
+          </div>
+          <div class="col-3">
+            <img src="images/category-3.jpg" />
           </div>
         </div>
       </div>
