--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <img src="images/logo.png" alt="" width="125px" />
           </div>
           <nav>
-            <ul>
+            <ul id="MenuItems">
               <li><a href="">Home</a></li>
               <li><a href="">Products</a></li>
               <li><a href="">About</a></li>
@@ -27,6 +27,7 @@
             </ul>
           </nav>
           <img src=images/cart.png alt="" width="30px" height="30px" >
+          <img src="images/menu.png" class="menu-icon" onclick="menutoggle()" />
         </div>
         <div class="row">
           <div class="col-2">
@@ -362,9 +363,25 @@
             </ul>
           </div>
         </div>
-        <hr>
+        <hr />
         <p class="copyright">Copyright 2024 - Easy Tutorials</p>
       </div>
     </div>
+
+    <!-- js for toggle menu -->
+
+    <script>
+      let MenuItems = document.getElementById("MenuItems");
+
+      MenuItems.style.maxHeight = "0px";
+
+      function menutoggle() {
+        if (MenuItems.style.maxHeight === "0px") {
+          MenuItems.style.maxHeight = "200px";
+        } else {
+          MenuItems.style.maxHeight = "0px";
+        }
+      }
+    </script>
   </body>
 </html>
