--- a/product-details.html
+++ b/product-details.html
@@ -36,6 +36,21 @@
       <div class="row">
         <div class="col-2">
           <img src="images/gallery-1.jpg" width="100%" />
+
+          <div class="small-img-row">
+            <div class="small-img-col">
+              <img src="images/gallery-1.jpg" width="100%" />
+            </div>
+            <div class="small-img-col">
+              <img src="images/gallery-2.jpg" width="100%" />
+            </div>
+            <div class="small-img-col">
+              <img src="images/gallery-3.jpg" width="100%" />
+            </div>
+            <div class="small-img-col">
+              <img src="images/gallery-4.jpg" width="100%" />
+            </div>
+          </div>
         </div>
         <div class="col-2">
           <p>Home / T-Shirt</p>
