add gallery functionality

--- a/product-details.html
+++ b/product-details.html
@@ -35,20 +35,20 @@
     <div class="small-container single-product">
       <div class="row">
         <div class="col-2">
-          <img src="images/gallery-1.jpg" width="100%" />
+          <img src="images/gallery-1.jpg" width="100%" id="ProductImg" />
 
           <div class="small-img-row">
             <div class="small-img-col">
-              <img src="images/gallery-1.jpg" width="100%" />
+              <img src="images/gallery-1.jpg" width="100%" class="small-img" />
             </div>
             <div class="small-img-col">
-              <img src="images/gallery-2.jpg" width="100%" />
+              <img src="images/gallery-2.jpg" width="100%" class="small-img" />
             </div>
             <div class="small-img-col">
-              <img src="images/gallery-3.jpg" width="100%" />
+              <img src="images/gallery-3.jpg" width="100%" class="small-img" />
             </div>
             <div class="small-img-col">
-              <img src="images/gallery-4.jpg" width="100%" />
+              <img src="images/gallery-4.jpg" width="100%" class="small-img" />
             </div>
           </div>
         </div>
@@ -187,6 +187,25 @@
           MenuItems.style.maxHeight = "0px";
         }
       }
+    </script>
+
+    <!-- js for product gallery -->
+    <script>
+      let ProductImg = document.getElementById("ProductImg");
+      let SmallImg = document.getElementsByClassName("small-img");
+
+      SmallImg[0].onclick = function () {
+        ProductImg.src = SmallImg[0].src;
+      };
+      SmallImg[1].onclick = function () {
+        ProductImg.src = SmallImg[1].src;
+      };
+      SmallImg[2].onclick = function () {
+        ProductImg.src = SmallImg[2].src;
+      };
+      SmallImg[3].onclick = function () {
+        ProductImg.src = SmallImg[3].src;
+      };
     </script>
   </body>
 </html>
