--- a/product-details.html
+++ b/product-details.html
@@ -77,6 +77,16 @@
       </div>
     </div>
 
+    <!-- title -->
+    <div class="small-container">
+      <div class="row row-2">
+        <h2>Related Products</h2>
+        <p>View More</p>
+      </div>
+    </div>
+
+    <!-- products -->
+
     <div class="small-container">
       <div class="row">
         <div class="col-4">
